# skynet01-project

./: README.md
Fine Tuning/colab_notebooks/: phase_1_pretrain_test.ipynb  phase_1_results_20250831_153350.json  phase_2_overfitting.ipynb  phase_3_full fine-tuning.ipynb  phase_4_end_train.ipynb
Fine Tuning/data_set_generation/: dataset_generator.py  filter_dataset.py  generate_only.py  level_validator.py  rpg_training_dataset.jsonl  rpg_training_dataset_gpt4_1.jsonl  rpg_training_dataset_gpt4_1_filtered.jsonl  run_generation.py  validate_only.py  validation_results.json  validation_results_gpt4_1.json  visualize_maps.py
Fine Tuning/retrained_tinyllama_rpg/: tokenizer.json  tokenizer_config.json
RPG_Game/jac_impl_6/utils/: level_manager.impl.jac  level_manager.jac
skynet-mtllm/: README.md  pyproject.toml
skynet-mtllm/skynet_mtllm/: plugin.py
skynet-mtllm/skynet_mtllm/runtime/: device.py  local_model.py  trainer.py
skynet-mtllm/skynet_mtllm/storage/: cache.py  dataset.py
skynet-mtllm/skynet_mtllm/tests/: test.jac  test_instalation.py
