[tool.poetry]
name = "skynet-mtllm"
version = "0.1.0"
description = "Skynet MTLLM plugin with dynamic model shifting, SLM support, and device selection"
authors = ["SkyNet01 <name.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mtllm = "*"
jaclang = "*"
torch = "^2.2.0"
transformers = "^4.36.0"
sentence-transformers = "^2.2.2"
datasets = "*"
peft = "*"

[tool.poetry.plugins."jac"]
skynet-mtllm = "skynet_mtllm.plugin:SkynetMtllmMachine"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"